--- a/.env
+++ b/.env
@@ -14,6 +14,9 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+PROJECT_DIR=.
+WORKING_DIR=/var/www/application
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=f01af8492dab729ff0229588b247df98
@@ -26,7 +29,7 @@ APP_SECRET=f01af8492dab729ff0229588b247df98
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -39,3 +42,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+##> symfony/telegram-notifier ###
+TELEGRAM_DSN=telegram://6735331251:AAEEmXC24R7ruwIds3K2jan7lv2D3wqZlcc@default?channel=@UGXywVSGEi
+##< symfony/telegram-notifier ###
