--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,15 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Service\Currency\BankService\MonoBankService:
+        public: true
+    App\Service\Currency\BankService\PrivatBankService:
+        public: true
+    App\Service\Currency\Formatters\PlainTextFormatter:
+        public: true
+    App\Service\NotifyService\TelegramNotifier:
+        public: true
+
+    App\Service\Currency\CurrencyWorkerServiceFactory:
+        arguments:
+            $container: '@service_container'
