--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,23 @@
 version: '3.8'
 
 services:
-  database:
-    image: postgres:${POSTGRES_VERSION:-15}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    volumes:
-      - database_data:/var/lib/postgresql/data:rw
+    php:
+        build:
+            context: ./docker/php
+        container_name: symfony_php
+        ports:
+            - '9456:9000'
+        working_dir: ${WORKING_DIR}
+        volumes:
+            - ${PROJECT_DIR}:${WORKING_DIR}
 
-  php:
-    build:
-      context: ./docker/php
-    ports:
-      - '9000:9000'
-    volumes:
-      - .:/var/www/application
-    depends_on:
-      - database
-
-  nginx:
-    image: nginx:stable-alpine
-    ports:
-      - '8080:80'
-    volumes:
-      - .:/var/www/application
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - php
-      - database
-
-volumes:
-  database_data:
+    nginx:
+        image: nginx:stable-alpine
+        container_name: symfony_nginx
+        ports:
+            - '8080:80'
+        volumes:
+            - ${PROJECT_DIR}:${WORKING_DIR}
+            - ${PROJECT_DIR}/docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+        depends_on:
+            - php
