--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
         build:
             context: ./docker/php
         container_name: symfony_php
-        ports:
-            - '9456:9000'
         working_dir: ${WORKING_DIR}
         volumes:
             - ${PROJECT_DIR}:${WORKING_DIR}
@@ -15,7 +13,7 @@ services:
         image: nginx:stable-alpine
         container_name: symfony_nginx
         ports:
-            - '8080:80'
+            - "${NGINX_MAPPED_PORT:-8080}:80"
         volumes:
             - ${PROJECT_DIR}:${WORKING_DIR}
             - ${PROJECT_DIR}/docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
